--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,15 +51,14 @@ jobs:
 
       - name: Install opam dependencies
         run: opam install --deps-only --yes .
-
-      - name: Install ocamlformat (Linux)
-        if: ${{runner.os == 'Linux'}}
-        run: |
-          wget https://github.com/aantron/ocamlformat-binary/releases/download/0.24.1/ocamlformat
-          sudo mv ocamlformat /usr/local/bin/ocamlformat
-          sudo chmod a+x /usr/local/bin/ocamlformat
+      # - name: Install ocamlformat (Linux)
+      #   if: ${{runner.os == 'Linux'}}
+      #   run: |
+      #     wget https://github.com/aantron/ocamlformat-binary/releases/download/0.24.1/ocamlformat
+      #     sudo mv ocamlformat /usr/local/bin/ocamlformat
+      #     sudo chmod a+x /usr/local/bin/ocamlformat
       - name: Install ocamlformat (non-Linux)
-        if: ${{runner.os != 'Linux'}}
+        # if: ${{runner.os != 'Linux'}}
         run: opam install ocamlformat.0.24.1 --yes
 
       - name: Install coreutils (Mac)
