--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bisect_ppx",
+  "name": "@jfrolich/bisect_ppx",
   "description": "Code coverage for OCaml and Reason",
   "version": "2.8.1",
   "license": "MIT",
